<resources>
    <string name="app_name">DTA Meet Up</string>

    <!-- Facebook Login -->
    <string name="facebook_app_id">1313522182110787</string>
    <string name="fb_login_protocol_scheme">fb1313522182110787</string>


    <string name="buttonConnexion">Se connecter</string>
    <string name="disconnect"> Se déconnecter </string>

    <!-- Google Login -->
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>


    <string name="login">Connexion</string>
    <string name="login_with_facebook">Se connecter avec Facebook</string>
    <string name="login_with_google">Se connecter avec Google</string>
    <string name="login_disclaimer">Aucune de vos informations personnelles ne sera consultable par d\'autres utilisateurs</string>



    <!-- ITEMS CATEGORY AND STRING ARRAY -->
    <string name="event">Évènement</string>
    <string name="resto">Restaurant</string>
    <string name="bar">Bar</string>
    <string name="pro">Profesionnel</string>
    <string name="sport">Sport</string>
    <string name="movies">Cinéma</string>
    <string name="games">Jeux</string>
    <string name="music">Musique</string>
    <string name="shopping">Shopping</string>
    <string name="chill">Chill</string>

    <string-array name="categories">
        <item>event</item>
        <item>resto</item>
        <item>bar</item>
        <item>pro</item>
        <item>sport</item>
        <item>movies</item>
        <item>games</item>
        <item>music</item>
        <item>shopping</item>
        <item>chill</item>
    </string-array>

    <array name="icons">
        <item>@drawable/ic_event</item>
        <item>@drawable/ic_resto</item>
        <item>@drawable/ic_bar</item>
        <item>@drawable/ic_pro</item>
        <item>@drawable/ic_sport</item>
        <item>@drawable/ic_movies</item>
        <item>@drawable/ic_games</item>
        <item>@drawable/ic_music</item>
        <item>@drawable/ic_shopping</item>
        <item>@drawable/ic_chill</item>
    </array>




    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_event">Ajouter un évènenement</string>
    <string name="event_title">Titre de l\'évènement</string>
    <string name="date_and_time"><![CDATA[Date & heure]]></string>

    <string name="event_category">Catégorie</string>
    <string name="location">Lieux de l\'évènement</string>
    <string name="description">Description</string>
    <string name="save">Sauvegarder</string>
    <string name="selectDateTime">Sélectionner date et heure</string>
    <string name="interested">Intéressés</string>
    <string name="edit">Editer</string>
    <string name="delete">Supprimer</string>
    <string name="cancel">Annuler</string>
    <string name="deleteEventMessage">Êtes-vous sûr de vouloir supprimer cet évènement ?</string>

</resources>