<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/small_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/weekDayTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="bottom"
                android:maxLines="1"
                android:text="Ven"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dayMonthTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="27"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/monthTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLines="1"
                android:text="OCT"
                android:textAlignment="center"
                android:textColor="@color/secondaryTextColor"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:maxLines="4"
            android:text="Title de l'évènement"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/categoryImageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:tint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_event" />

        <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/event_category"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nbInterestedTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="888"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textStyle="bold" />

        <FrameLayout
            android:id="@+id/toggleInterested"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true">

            <ImageView
                android:id="@+id/interestedToggleImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginRight="@dimen/small_margin"
                android:contentDescription="@string/interested"
                android:tint="@color/colorPrimary"
                app:srcCompat="@drawable/ic_favorite_filled" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:tint="@color/secondaryTextColor"
            app:srcCompat="@drawable/ic_location" />

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:lines="2"
            android:maxLines="3"
            android:minLines="2"
            android:text="Place du cul cumber"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:text="@string/description"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/secondaryTextColor" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Big inspiring description"
        android:textColor="@color/tertiaryTextColor" />

</LinearLayout>
